# stock-data

./: README.md  pyproject.toml
.github/workflows/: code_quality.yml  publish_kedro_viz.yml
conf/base/: catalog.yml  globals.yml  parameters_download_data.yml  parameters_feature_engineering.yml
notebooks/: 1.0-Analyze-data.ipynb  1.1-Plot-stocks.ipynb  1.2-Analyze-data.ipynb  2.1-Feature-engineering.ipynb  3.1-Analyze-for-modelling.ipynb
src/stock_data/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/stock_data/pipelines/download_data/: __init__.py  download_data_run.py  nodes.py  pipeline.py
src/stock_data/pipelines/feature_engineering/: __init__.py  nodes.py  pipeline.py
src/stock_data/utils/: utils.py
