[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "stock_data"
readme = "README.md"
dynamic = [ "version",]
dependencies = [
 "ipython>=8.10",
 "jupyterlab>=3.0",
 "notebook",
 "kedro[jupyter]~=0.19.11",
 "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset, plotly-plotlydataset, plotly-jsondataset, matplotlib-matplotlibwriter]>=3.0",
 "kedro-viz>=6.7.0",
 "scikit-learn~=1.5.1",
 "seaborn~=0.12.1",
 "yfinance>=0.2.54",
 "statsmodels>=0.14.4",
]

[project.scripts]
stock-data = "stock_data.__main__:main"

[tool.kedro]
package_name = "stock_data"
project_name = "stock-data"
kedro_init_version = "0.19.11"
tools = "['Linting', 'Testing', 'Data Structure', 'Kedro Viz']"
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [
    "B",    # Bugbear
    "C4",   # Comprehensions
    "C90",  # mccabe
    "D",    # Docstrings
    "E",    # pycodestyle error
    "W",    # pycodestyle warning
    "F",    # flake8
    "S",    # bandit
    "N",    # pep8-naming
    "RUF",  # ruff
    "I",    # isort
    "PD",   # pandas
    "UP",   # pyupgrade
    "PL",   # pylint
    "T201", # print
]
ignore = [
    "E501", # line too long
]

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/stock_data -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.version]
attr = "stock_data.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "7e9a43febdcb4c2e9dda8319e1592dd2"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.0",
]
